# milo-cost-auditor-mcp

./: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
examples/: audit_your_own_bill.md
launch/: README.md  asciinema_demo_script.md  devto_article.md  hn_show_post.md  linkedin_carousel.md  linkedin_post.md  pricing_verification_20260516.md  real_milo_audit_20260516.json  real_milo_audit_20260516.md  twitter_thread.md
launch/fixtures/: milo_real_invoice_sample.csv
launch/series/: 02_frontier_models_in_agent_loops.md  03_mcp_servers_i_wish_existed.md  04_built_an_mcp_in_one_day.md
src/milo_cost_auditor/: __init__.py  __main__.py  audit_engine.py  lightning.py  lightning_ledger.py  payment.py  pricing_table.py  routing_advisor.py  server.py  telemetry.py  tools.py
tests/: conftest.py  test_audit_engine.py  test_lightning.py  test_payment.py  test_routing_advisor.py  test_server.py
tests/fixtures/: sample_anthropic_invoice.csv  sample_openai_invoice.csv
